Issue #1 ITKUtils was applied to all ROI tools .gitignore_global to .gitignore and removed .gitignore_global

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,27 @@ DATA
 software
 Ming
 /Projects/BolusShaping/*.lst
-
+BIN
+DATA
+output*
+old*
+tmp*
+CMakeFiles
+CMakeCache.txt
+.DS_Store
+*~
+*.nrrd
+*.dcm
+*.zip
+*.gz
+*.TIF
+*.tif
+*.mha
+*.mhd
+*.raw
+*.jpg
+*.png
+*.pyc
+*.swp
+*.a
+*.so
