--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
 DICOM
 software
+Documents
+References
 Ming
 /Projects/BolusShaping/*.lst
 BIN
 DATA
 output*
 old*
+test*
 tmp*
 CMakeFiles
 CMakeCache.txt
 .DS_Store
 .Rproj.user
+.RData
 *~
 *.nrrd
 *.dcm
@@ -29,4 +33,5 @@ CMakeCache.txt
 *.so
 *.asv
 *.log
+*.csv
 ~*
