RTConverter - Ugraded with improved Spatial Object Filter ITKUtils - Preparing make a library and tools

--- a/Tools/ITKUtils/SRC/CMakeLists.txt
+++ b/Tools/ITKUtils/SRC/CMakeLists.txt
@@ -19,8 +19,12 @@ ELSE(ITK_FOUND)
 ENDIF(ITK_FOUND)
 
 ADD_LIBRARY(ITKUtils
-    ITKUtils.cxx
-    itkMaskedSTAPLEImageFilter.hxx
+  ITKUtils.cxx
+  itkMaskedSTAPLEImageFilter.hxx
+  itkMaskedSpatialObjectToImageFilter.hxx
+  itkGrowCutSegmentationImageFilter.hxx
+  itkFastGrowCutSegmentationImageFilter.hxx
+  fibheap.cpp
 )
 
 SET (BUILD_SHARED_LIBS OFF)
