Reorganize the codes with grouping

--- a/Tools/ContourTools/SRC/CMakeLists.txt
+++ b/Tools/ContourTools/SRC/CMakeLists.txt
@@ -1,4 +1,4 @@
-PROJECT (HoleGenerator)
+PROJECT (ContourTools)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
 
 #------------------------------------------------ 
@@ -21,12 +21,36 @@ ENDIF(ITK_FOUND)
 INCLUDE_DIRECTORIES(../../../Tools/ITKUtils/SRC)
 FIND_LIBRARY(ITKUTILS_LIB ITKUtils ../../../Tools/ITKUtils/LIB/ REQUIRED)
 
+ADD_EXECUTABLE(ROIGenerator
+    ROIGenerator.cxx
+)
+ADD_EXECUTABLE(ROI2BinImage
+    ROI2BinImage.cxx
+)
+ADD_EXECUTABLE(ROICropImage
+    ROICropImage.cxx
+)
+ADD_EXECUTABLE(ExtractBoundary
+    ExtractBoundary.cxx
+)
+ADD_EXECUTABLE(GTVs2ITV
+    GTVs2ITV.cxx
+)
 ADD_EXECUTABLE(HoleGenerator
     HoleGenerator.cxx
+)
+ADD_EXECUTABLE(STAPLEComparison
+    STAPLEComparison.cxx
 )
 
 
 SET (BUILD_SHARED_LIBS OFF)
 SET (CMAKE_VERBOSE_MAKEFILE OFF)
 
+TARGET_LINK_LIBRARIES(ROIGenerator ${ITK_LIBRARIES} ${ITKUTILS_LIB})
+TARGET_LINK_LIBRARIES(ROICropImage ${ITK_LIBRARIES} ${ITKUTILS_LIB})
+TARGET_LINK_LIBRARIES(ROI2BinImage ${ITK_LIBRARIES} ${ITKUTILS_LIB})
+TARGET_LINK_LIBRARIES(ExtractBoundary ${ITK_LIBRARIES} ${ITKUTILS_LIB})
+TARGET_LINK_LIBRARIES(GTVs2ITV ${ITK_LIBRARIES} ${ITKUTILS_LIB})
 TARGET_LINK_LIBRARIES(HoleGenerator ${ITK_LIBRARIES} ${ITKUTILS_LIB})
+TARGET_LINK_LIBRARIES(STAPLEComparison ${ITK_LIBRARIES} ${ITKUTILS_LIB})
