--- a/Tools/DICOMTools/SRC/CMakeLists.txt
+++ b/Tools/DICOMTools/SRC/CMakeLists.txt
@@ -1,4 +1,4 @@
-PROJECT (DICOM2NRRDConverter)
+PROJECT (DICOMTools)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
 
 #------------------------------------------------ 
@@ -27,6 +27,9 @@ ELSE(Boost_FOUND)
     "Cannot build Application without Boost. Please set Boost_DIR.")
 ENDIF(Boost_FOUND)
 
+INCLUDE_DIRECTORIES(../../../Tools/ITKUtils/SRC)
+FIND_LIBRARY(ITKUTILS_LIB ITKUtils ../../../Tools/ITKUtils/LIB/ REQUIRED)
+
 ADD_EXECUTABLE(DICOM2NRRDConverter
     DICOM2NRRDConverter.cxx
 )
@@ -36,6 +39,13 @@ ADD_EXECUTABLE(DICOM2NRRDConverterHCC
 ADD_EXECUTABLE(DICOM2NRRDConverterNLST
     DICOM2NRRDConverterNLST.cxx
 )
+ADD_EXECUTABLE("DICOM-RT2NRRDConverter"
+    DICOM-RT2NRRDConverter.cxx
+) 
+ADD_EXECUTABLE("DICOMTagReader"
+    DICOMTagReader.cxx
+)
+
 
 SET (BUILD_SHARED_LIBS OFF)
 SET (CMAKE_VERBOSE_MAKEFILE OFF)
@@ -43,3 +53,6 @@ SET (CMAKE_VERBOSE_MAKEFILE OFF)
 TARGET_LINK_LIBRARIES(DICOM2NRRDConverter ${ITK_LIBRARIES} ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(DICOM2NRRDConverterHCC ${ITK_LIBRARIES} ${Boost_LIBRARIES})
 TARGET_LINK_LIBRARIES(DICOM2NRRDConverterNLST ${ITK_LIBRARIES} ${Boost_LIBRARIES})
+TARGET_LINK_LIBRARIES(DICOM-RT2NRRDConverter ${ITK_LIBRARIES} ${ITKUTILS_LIB}) 
+TARGET_LINK_LIBRARIES(DICOMTagReader ${ITK_LIBRARIES} ${ITKUTILS_LIB}) 
+
