--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ compiler:
 
 before_install:
  - sudo add-apt-repository ppa:zarquon42/precise-backports -y
+ - sudo apt-get update -qq
  - sudo apt-get install -y cmake libinsighttoolkit4-dev
 
 script:
