--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ compiler:
  - clang
 
 before_install:
- - sudo add-apt-repository ppa:zarquon42/precise-backports -y
+ - sudo sudo add-apt-repository universe -y
  - sudo apt-get update -qq
- - sudo apt-get install -y cmake ibboost1.55-dev libboost1.55 libinsighttoolkit4-dev
+ - sudo apt-get install -y cmake libboost-dev libinsighttoolkit4-dev
 
 script:
  - cd Tools
