--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
  - clang
 
 before_install:
- - sudo sudo add-apt-repository universe -y
+ - sudo add-apt-repository universe -y
  - sudo apt-get update -qq
  - sudo apt-get install -y cmake libboost-dev libinsighttoolkit4-dev
 
