--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
  - clang
 
 before_install:
- - sudo add-apt-repository universe -y
+ - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) universe"
  - sudo apt-get update -qq
  - sudo apt-get install -y cmake libboost-dev libinsighttoolkit4-dev
 
