--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,65 @@
+
 language: cpp
+
+sudo: required
 
 dist: trusty
 
-compiler:
- - gcc
- - clang
+addons:
+  apt:
+    packages:
+    - cmake
+
+matrix:
+  include:
+    - os: osx
+      compiler: clang
+      env: ITK_VERSION=v4.8.0
+    - os: osx
+      compiler: clang
+      env: ITK_VERSION=v4.9.0
+    - os: osx
+      compiler: clang
+      env: ITK_VERSION=v4.10.0
+    - os: linux
+      compiler: gcc
+      env: ITK_VERSION=v4.8.0
+    - os: linux
+      compiler: gcc
+      env: ITK_VERSION=v4.9.0
+    - os: linux
+      compiler: gcc
+      env: ITK_VERSION=v4.10.0
+
+cache:
+  - directories:
+    - $HOME/itk-v4.8.0
+    - $HOME/itk-v4.8.0-build
+    - $HOME/itk-v4.9.0
+    - $HOME/itk-v4.9.0-build
+    - $HOME/itk-v4.10.0
+    - $HOME/itk-v4.10.0-build
 
 before_install:
- - sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) universe"
- - sudo apt-get update -qq
- - sudo apt-get install -y cmake libboost-dev libinsighttoolkit4-dev
+  - if test $TRAVIS_OS_NAME == osx ; then brew update; brew install fftw; fi
+
+before_script:
+  - export NUM_THREADS=4
+  - export ITK_SOURCE_DIR=$HOME/itk-${ITK_VERSION}
+  - export ITK_BUILD_DIR=${ITK_SOURCE_DIR}-build
+  - if ! test -e ${ITK_SOURCE_DIR}/CMakeLists.txt; then rm -fr $ITK_SOURCE_DIR; fi
+  - if ! test -d ${ITK_SOURCE_DIR}; then git clone --branch ${ITK_VERSION} git://itk.org/ITK.git ${ITK_SOURCE_DIR}; fi
+  - if ! test -d ${ITK_BUILD_DIR}; then mkdir ${ITK_BUILD_DIR}; fi
+  - cd ${ITK_BUILD_DIR}
+  - cmake ${ITK_SOURCE_DIR}
+    -DCMAKE_BUILD_TYPE=Release
+    -DBUILD_EXAMPLES=OFF
+    -DBUILD_TESTING=OFF
+    -DModule_ITKReview=ON
+  - make --jobs=$NUM_THREADS --keep-going
+  - cd -
 
 script:
- - cd Tools
- - make
-
+  - cd Tools
+  - make --jobs=$NUM_THREADS --keep-going all
+  
