--- a/.travis.yml
+++ b/.travis.yml
@@ -16,21 +16,27 @@ matrix:
     - os: osx
       compiler: clang
       env: ITK_VERSION=v4.8.0
+      python: 3.5
     - os: osx
       compiler: clang
       env: ITK_VERSION=v4.9.0
+      python: 3.5
     - os: osx
       compiler: clang
       env: ITK_VERSION=v4.10.0
+      python: 3.5
     - os: linux
       compiler: gcc
       env: ITK_VERSION=v4.8.0
+      python: 3.5
     - os: linux
       compiler: gcc
       env: ITK_VERSION=v4.9.0
+      python: 3.5
     - os: linux
       compiler: gcc
       env: ITK_VERSION=v4.10.0
+      python: 3.5
 
 cache:
   - directories:
