--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ cache:
 
 before_install:
   - if test $TRAVIS_OS_NAME == osx ; then brew update; brew install python3; fi
-  - sudo pip3 install conda
+  - sudo python3 -m pip install conda
   - conda update --yes conda
   - conda install --yes python=$TRAVIS_PYTHON_VERSION pandas scipy numpy ipython matplotlib
   - conda install --yes -c bioconda ruffus
