--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,7 @@ cache:
 before_install:
   - if test $TRAVIS_OS_NAME == osx ; then brew update; brew install python3; fi
   - sudo python3 -m pip install conda
+  - conda config --set always_yes yes --set changeps1 no
   - conda update --yes conda
   - conda install --yes python=$TRAVIS_PYTHON_VERSION pandas scipy numpy ipython matplotlib
   - conda install --yes -c bioconda ruffus
