brew upgrade libpng

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ cache:
     - $HOME/itk-v4.10.0-build
 
 before_install:
-  - if test $TRAVIS_OS_NAME == osx ; then brew update; brew install python3 libpng; fi
+  - if test $TRAVIS_OS_NAME == osx ; then brew update; brew install python3; brew upgrade libpng; fi
   - python3 -m pip install conda
   - conda config --set always_yes yes --set changeps1 no
   - conda install --yes python=$TRAVIS_PYTHON_VERSION pandas scipy numpy ipython matplotlib
