--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ cache:
 
 before_install:
   - if test $TRAVIS_OS_NAME == osx ; then brew update; brew install python3; brew upgrade libpng; fi
- 
+
 
 before_script:
   - export NUM_THREADS=4
@@ -67,13 +67,12 @@ before_script:
   - python3 -m pip install codecov
 
 script:
-  - cd Tools
-  - make --jobs=$NUM_THREADS --keep-going all
-  - sh ../get_code_cov.sh
-  - cd -
+  - mkdir build && cd build
+  - cmake .. -DENABLE_COVERAGE=On && make && make test
+  - make gcov
+  - make lcov
   - coverage run run.py
   - codecov
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
-  
+  - bash <(curl -s https://codecov.io/bash) -X gcov
