--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
     - python3
     - python3-pip
     - python3-yaml
+    - lcov
 
 matrix:
   include:
@@ -45,7 +46,7 @@ cache:
     - $HOME/itk-v4.10.0-build
 
 before_install:
-  - if test $TRAVIS_OS_NAME == osx ; then brew update; brew install python3; brew upgrade libpng; fi
+  - if test $TRAVIS_OS_NAME == osx ; then brew update; brew install python3 lcov; brew upgrade libpng; fi
 
 
 before_script:
@@ -67,6 +68,7 @@ before_script:
   - python3 -m pip install codecov
 
 script:
+  - git submodule init && git submodule update
   - mkdir build && cd build
   - cmake .. -DENABLE_COVERAGE=On && make && make test
   - make gcov
