--- a/Tools/ContourTools/CMakeLists.txt
+++ b/Tools/ContourTools/CMakeLists.txt
@@ -43,10 +43,12 @@ TARGET_LINK_LIBRARIES(HoleGenerator ${ITK_LIBRARIES} ITKUtils)
 TARGET_LINK_LIBRARIES(STAPLEComparison ${ITK_LIBRARIES} ITKUtils)
 
 find_package(codecov)
-add_coverage(ROIGenerator)
-add_coverage(ROICropImage)
-add_coverage(ROI2BinImage)
-add_coverage(ExtractBoundary)
-add_coverage(GTVs2ITV)
-add_coverage(HoleGenerator)
-add_coverage(STAPLEComparison)
+if(codecov_FOUND)
+  add_coverage(ROIGenerator)
+  add_coverage(ROICropImage)
+  add_coverage(ROI2BinImage)
+  add_coverage(ExtractBoundary)
+  add_coverage(GTVs2ITV)
+  add_coverage(HoleGenerator)
+  add_coverage(STAPLEComparison)
+endif()
