--- a/Tools/FeatureExtraction/CMakeLists.txt
+++ b/Tools/FeatureExtraction/CMakeLists.txt
@@ -19,4 +19,6 @@ SET (CMAKE_VERBOSE_MAKEFILE OFF)
 TARGET_LINK_LIBRARIES(FeatureExtraction ${ITK_LIBRARIES} ITKUtils)
 
 find_package(codecov)
-add_coverage(FeatureExtraction)
+if(codecov_FOUND)
+  add_coverage(FeatureExtraction)
+endif()
