--- a/.travis.yml
+++ b/.travis.yml
@@ -22,16 +22,10 @@ matrix:
       env: ITK_VERSION=v4.8.0 TRAVIS_PYTHON_VERSION=3.5
     - os: osx
       compiler: clang
-      env: ITK_VERSION=v4.9.0 TRAVIS_PYTHON_VERSION=3.5
-    - os: osx
-      compiler: clang
       env: ITK_VERSION=v4.10.0 TRAVIS_PYTHON_VERSION=3.5
     - os: linux
       compiler: gcc
       env: ITK_VERSION=v4.8.0 TRAVIS_PYTHON_VERSION=3.5
-    - os: linux
-      compiler: gcc
-      env: ITK_VERSION=v4.9.0 TRAVIS_PYTHON_VERSION=3.5
     - os: linux
       compiler: gcc
       env: ITK_VERSION=v4.10.0 TRAVIS_PYTHON_VERSION=3.5
@@ -40,8 +34,6 @@ cache:
   - directories:
     - $HOME/itk-v4.8.0
     - $HOME/itk-v4.8.0-build
-    - $HOME/itk-v4.9.0
-    - $HOME/itk-v4.9.0-build
     - $HOME/itk-v4.10.0
     - $HOME/itk-v4.10.0-build
 
@@ -68,7 +60,7 @@ before_script:
   - python3 setup.py install
   - cd external/TCIAExplorer
   - python3 setup.py install
-  - cd - 
+  - cd -
 
 script:
   - mkdir build
@@ -77,6 +69,7 @@ script:
   - make gcov
   - make lcov
   - cd -
+  - python download_lungx_tcia.py
   - coverage run run.py
   - codecov
 
