COMP: fix typo in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ before_script:
   - sh install_modules.sh
   - python3 -m pip install codecov
   - python3 setup.py install
-  - cd external/TCIAExplorer
+  - cd externals/TCIAExplorer
   - python3 setup.py install
   - cd -
 
