--- a/.travis.yml
+++ b/.travis.yml
@@ -22,16 +22,10 @@ matrix:
       env: ITK_VERSION=v4.8.0 TRAVIS_PYTHON_VERSION=3.5
     - os: osx
       compiler: clang
-      env: ITK_VERSION=v4.9.0 TRAVIS_PYTHON_VERSION=3.5
-    - os: osx
-      compiler: clang
       env: ITK_VERSION=v4.10.0 TRAVIS_PYTHON_VERSION=3.5
     - os: linux
       compiler: gcc
       env: ITK_VERSION=v4.8.0 TRAVIS_PYTHON_VERSION=3.5
-    - os: linux
-      compiler: gcc
-      env: ITK_VERSION=v4.9.0 TRAVIS_PYTHON_VERSION=3.5
     - os: linux
       compiler: gcc
       env: ITK_VERSION=v4.10.0 TRAVIS_PYTHON_VERSION=3.5
@@ -40,14 +34,11 @@ cache:
   - directories:
     - $HOME/itk-v4.8.0
     - $HOME/itk-v4.8.0-build
-    - $HOME/itk-v4.9.0
-    - $HOME/itk-v4.9.0-build
     - $HOME/itk-v4.10.0
     - $HOME/itk-v4.10.0-build
 
 before_install:
   - if test $TRAVIS_OS_NAME == osx ; then brew update; brew install python3 lcov; brew upgrade libpng; fi
-
 
 before_script:
   - export NUM_THREADS=4
@@ -66,15 +57,19 @@ before_script:
   - cd -
   - sh install_modules.sh
   - python3 -m pip install codecov
+  - python3 setup.py install
+  - cd externals/TCIAExplorer
+  - python3 setup.py install
+  - cd -
+  - python3 download_lungx_tcia.py
 
 script:
-  - mkdir build
+  - if ! test -d build; then mkdir build; fi
   - cd build
-  - cmake .. -DENABLE_COVERAGE=On && make && make test
+  - cmake .. -DENABLE_COVERAGE=On && make && make test && cd - && coverage run run.py && cd build
   - make gcov
   - make lcov
   - cd -
-  - coverage run run.py
   - codecov
 
 after_success:
