--- a/Tools/DICOMTools/CMakeLists.txt
+++ b/Tools/DICOMTools/CMakeLists.txt
@@ -44,8 +44,10 @@ TARGET_LINK_LIBRARIES(DICOMTagReader ${ITK_LIBRARIES})
 
 
 find_package(codecov)
-add_coverage(DICOM2NRRDConverter)
-add_coverage(DICOM2NRRDConverterHCC)
-add_coverage(DICOM2NRRDConverterNLST)
-add_coverage(DICOM-RT2NRRDConverter)
-add_coverage(DICOMTagReader)
+if(codecov_FOUND)
+  add_coverage(DICOM2NRRDConverter)
+  add_coverage(DICOM2NRRDConverterHCC)
+  add_coverage(DICOM2NRRDConverterNLST)
+  add_coverage(DICOM-RT2NRRDConverter)
+  add_coverage(DICOMTagReader)
+endif()
