COMP: fix conda installation

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ cache:
   - $HOME/itk-v4.10.0
   - $HOME/itk-v4.10.0-build
 before_install:
-- if test $TRAVIS_OS_NAME == osx ; then brew update; brew install python3 lcov; brew
+- if ! test $TRAVIS_OS_NAME == osx ; then brew update; brew install python3 lcov; brew
   upgrade libpng; fi
 before_script:
 - export NUM_THREADS=4
@@ -55,7 +55,7 @@ before_script:
 script:
 - if ! test -d build; then mkdir build; fi
 - cd build
-- cmake .. -DENABLE_COVERAGE=On && make && make test && cd - && coverage run script/run_lungx.py
+- cmake .. -DENABLE_COVERAGE=On -DITK_DIR=${ITK_BUILD_DIR} && make && make test && cd - && coverage run script/run_lungx.py
   && cd build
 - make gcov
 - make lcov
