--- a/.travis.yml
+++ b/.travis.yml
@@ -47,15 +47,9 @@ before_script:
 - make --jobs=$NUM_THREADS --keep-going
 - cd -
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-    curl "https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh" -o miniconda_install.sh
-    if [ $? -ne 0 ]; then
-        curl "http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh" -o miniconda_install.sh
-    fi
+    curl "https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh" -o miniconda_install.sh;
   elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-    curl "https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh" -o Miniconda_Install.sh
-    if [ $? -ne 0 ]; then
-       curl "http://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh" -o Miniconda_Install.sh
-    fi
+    curl "https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh" -o Miniconda_Install.sh;
   fi
 - bash miniconda_install.sh -b -f -p "$(pwd)/miniconda/"
 - export PATH="$HOME/miniconda/bin:$PATH"
