--- a/.travis.yml
+++ b/.travis.yml
@@ -65,6 +65,7 @@ before_script:
 - cd externals/TCIAExplorer
 - python3 setup.py install
 - cd -
+- python3 setup.py install
 - python3 script/download_lungx_tcia.py
 script:
 - if ! test -d build; then mkdir build; fi
