--- a/.travis.yml
+++ b/.travis.yml
@@ -14,22 +14,14 @@ matrix:
   include:
   - os: osx
     compiler: clang
-    env: ITK_VERSION=v4.8.0 TRAVIS_PYTHON_VERSION=3.5
-  - os: osx
-    compiler: clang
-    env: ITK_VERSION=v4.10.0 TRAVIS_PYTHON_VERSION=3.5
+    env: ITK_VERSION=v4.13.0 TRAVIS_PYTHON_VERSION=3.6
   - os: linux
     compiler: gcc
-    env: ITK_VERSION=v4.8.0 TRAVIS_PYTHON_VERSION=3.5
-  - os: linux
-    compiler: gcc
-    env: ITK_VERSION=v4.10.0 TRAVIS_PYTHON_VERSION=3.5
+    env: ITK_VERSION=v4.13.0 TRAVIS_PYTHON_VERSION=3.6
 cache:
 - directories:
-  - $HOME/itk-v4.8.0
-  - $HOME/itk-v4.8.0-build
-  - $HOME/itk-v4.10.0
-  - $HOME/itk-v4.10.0-build
+  - $HOME/itk-v4.13.0
+  - $HOME/itk-v4.13.0-build
 before_install:
 - if test $TRAVIS_OS_NAME == osx ; then brew update; brew install python3 lcov; brew
   upgrade libpng; fi
@@ -49,7 +41,7 @@ before_script:
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     curl "https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh" -o miniconda_install.sh;
   elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-    curl "https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh" -o Miniconda_Install.sh;
+    curl "https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh" -o miniconda_Install.sh;
   fi
 - bash miniconda_install.sh -b -f -p "$HOME/miniconda/"
 - export PATH="$HOME/miniconda/bin:$PATH"
