--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ cache:
   - $HOME/itk-v4.13.0
   - $HOME/itk-v4.13.0-build
 before_install:
-- if test $TRAVIS_OS_NAME == osx ; then brew update; brew install python3 lcov; brew
-  upgrade libpng; fi
+- if test $TRAVIS_OS_NAME == osx ; then brew update && brew install python3 lcov || brew upgrade libpng; fi
 before_script:
 - export NUM_THREADS=4
 - export ITK_SOURCE_DIR=$HOME/itk-${ITK_VERSION}
