--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,11 @@ matrix:
     compiler: gcc
     env: TRAVIS_PYTHON_VERSION=3.6
 before_install:
-- if test $TRAVIS_OS_NAME == osx ; then brew update && brew install python3 lcov insighttoolkit || brew upgrade libpng; fi
+- if test $TRAVIS_OS_NAME == osx ; then 
+    brew update;
+    brew tap homebrew/homebrew-science;
+    brew install python3 lcov insighttoolkit || brew upgrade libpng;
+  fi
 before_script:
 - export NUM_THREADS=4
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
