--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ matrix:
   include:
   - os: osx
     compiler: clang
-    env: ITK_VERSION=v4.13.0 TRAVIS_PYTHON_VERSION=3.6
+    env: ITK_VERSION=v4.13.0 VTK_VERSION=v8.2.0 TRAVIS_PYTHON_VERSION=3.6
   - os: linux
     compiler: gcc
-    env: ITK_VERSION=v4.13.0 TRAVIS_PYTHON_VERSION=3.6
+    env: ITK_VERSION=v4.13.0 VTK_VERSION=v8.2.0 TRAVIS_PYTHON_VERSION=3.6
 cache:
 - directories:
   - $HOME/itk-v4.13.0
@@ -26,6 +26,15 @@ before_install:
 - if test $TRAVIS_OS_NAME == osx ; then brew update && brew install python3 lcov || brew upgrade libpng; fi
 before_script:
 - export NUM_THREADS=4
+- export VTK_SOURCE_DIR=$HOME/vtk-${VTK_VERSION}
+- export VTK_BUILD_DIR=${VTK_SOURCE_DIR}-build
+- if ! test -e ${VTK_SOURCE_DIR}/CMakeLists.txt; then rm -fr $VTK_SOURCE_DIR; fi
+- if ! test -d ${VTK_SOURCE_DIR}; then git clone --branch ${VTK_VERSION} git://vtk.org/VTK.git ${VTK_SOURCE_DIR}; fi
+- if ! test -d ${VTK_BUILD_DIR}; then mkdir ${VTK_BUILD_DIR}; fi
+- cd ${VTK_BUILD_DIR}
+- cmake ${VTK_SOURCE_DIR} -DCMAKE_BUILD_TYPE=Release -DBUILD_EXAMPLES=OFF -DBUILD_TESTING=OFF 
+- make --jobs=${NUM_THREADS} --keep-going
+- cd -
 - export ITK_SOURCE_DIR=$HOME/itk-${ITK_VERSION}
 - export ITK_BUILD_DIR=${ITK_SOURCE_DIR}-build
 - if ! test -e ${ITK_SOURCE_DIR}/CMakeLists.txt; then rm -fr $ITK_SOURCE_DIR; fi
