--- a/Tools/FeatureExtraction/CMakeLists.txt
+++ b/Tools/FeatureExtraction/CMakeLists.txt
@@ -1,22 +1,22 @@
-PROJECT (FeatureExtraction)
+project (FeatureExtraction)
 
 if(COMMAND cmake_policy)
   cmake_policy(SET CMP0003 NEW)
 endif(COMMAND cmake_policy)
 
-INCLUDE_DIRECTORIES(../ITKUtils)
+include_directories(../ITKUtils)
 
-SET (EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
+set (EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 
-ADD_EXECUTABLE(FeatureExtraction
+add_executable(FeatureExtraction
     FeatureExtraction.cxx
 )
 
 
-SET (BUILD_SHARED_LIBS OFF)
-SET (CMAKE_VERBOSE_MAKEFILE OFF)
+set (BUILD_SHARED_LIBS OFF)
+set (CMAKE_VERBOSE_MAKEFILE OFF)
 
-TARGET_LINK_LIBRARIES(FeatureExtraction ${ITK_LIBRARIES} ITKUtils)
+target_link_libraries(FeatureExtraction ${ITK_LIBRARIES} ITKUtils)
 
 
 if(codecov_FOUND)
