STYLE: Remove CMake-language block-end command arguments
Ancient versions of CMake required else(), endif(), and similar block
termination commands to have arguments matching the command starting the block.
This is no longer the preferred style.

--- a/Tools/FeatureExtraction/CMakeLists.txt
+++ b/Tools/FeatureExtraction/CMakeLists.txt
@@ -2,7 +2,7 @@ project (FeatureExtraction)
 
 if(COMMAND cmake_policy)
   cmake_policy(SET CMP0003 NEW)
-endif(COMMAND cmake_policy)
+endif()
 
 include_directories(../ITKUtils)
 
