--- a/Tools/ContourTools/CMakeLists.txt
+++ b/Tools/ContourTools/CMakeLists.txt
@@ -2,7 +2,7 @@ project (ContourTools)
 
 if(COMMAND cmake_policy)
   cmake_policy(SET CMP0003 NEW)
-endif(COMMAND cmake_policy)
+endif()
 
 set (EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 
