COMP: changed to C++11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,9 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
 #
 # project information
 #
-if (${CMAKE_MAJOR_VERSION} EQUAL 3)
-	project("radiomics-tools" LANGUAGES CXX)
-else ()
-	project("radiomics-tools" CXX)
-endif ()
+project("radiomics-tools" LANGUAGES CXX)
+set (CMAKE_CXX_STANDARD 11)
 
 #------------------------------------------------
 # ITK
