--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,35 @@ matrix:
   - os: osx
     osx_image: xcode11
     compiler: clang
-    env: ITK_VERSION=v4.13.0 TRAVIS_PYTHON_VERSION=3.6
+    env: ITK_VERSION=v4.13.2 TRAVIS_PYTHON_VERSION=3.6
   - os: linux
     dist: bionic
     compiler: gcc
-    env: ITK_VERSION=v4.13.0 TRAVIS_PYTHON_VERSION=3.6
+    env: ITK_VERSION=v4.13.2 TRAVIS_PYTHON_VERSION=3.6
+  - os: osx
+    osx_image: xcode11
+    compiler: clang
+    env: ITK_VERSION=v5.0.1 TRAVIS_PYTHON_VERSION=3.6
+  - os: linux
+    dist: bionic
+    compiler: gcc
+    env: ITK_VERSION=v5.0.1 TRAVIS_PYTHON_VERSION=3.6
+  - os: osx
+    osx_image: xcode11
+    compiler: clang
+    env: ITK_VERSION=v4.13.2 TRAVIS_PYTHON_VERSION=3.7
+  - os: linux
+    dist: bionic
+    compiler: gcc
+    env: ITK_VERSION=v4.13.2 TRAVIS_PYTHON_VERSION=3.7
+  - os: osx
+    osx_image: xcode11
+    compiler: clang
+    env: ITK_VERSION=v5.0.1 TRAVIS_PYTHON_VERSION=3.7
+  - os: linux
+    dist: bionic
+    compiler: gcc
+    env: ITK_VERSION=v5.0.1 TRAVIS_PYTHON_VERSION=3.7
 cache:
 - directories:
   - $HOME/miniconda
