--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,37 @@ matrix:
   - os: osx
     osx_image: xcode11
     compiler: clang
-    env: ITK_VERSION=v4.13.0 TRAVIS_PYTHON_VERSION=3.6
+    env: ITK_VERSION=v4.13.2 TRAVIS_PYTHON_VERSION=3.6
   - os: linux
     dist: bionic
     compiler: gcc
-    env: ITK_VERSION=v4.13.0 TRAVIS_PYTHON_VERSION=3.6
+    env: ITK_VERSION=v4.13.2 TRAVIS_PYTHON_VERSION=3.6
+  - os: osx
+    osx_image: xcode11
+    compiler: clang
+    env: ITK_VERSION=v5.0.1 TRAVIS_PYTHON_VERSION=3.6
+  - os: linux
+    dist: bionic
+    compiler: gcc
+    env: ITK_VERSION=v5.0.1 TRAVIS_PYTHON_VERSION=3.6
+  - os: osx
+    osx_image: xcode11
+    compiler: clang
+    env: ITK_VERSION=v4.13.2 TRAVIS_PYTHON_VERSION=3.7
+  - os: linux
+    dist: bionic
+    compiler: gcc
+    env: ITK_VERSION=v4.13.2 TRAVIS_PYTHON_VERSION=3.7
+  - os: osx
+    osx_image: xcode11
+    compiler: clang
+    env: ITK_VERSION=v5.0.1 TRAVIS_PYTHON_VERSION=3.7
+  - os: linux
+    dist: bionic
+    compiler: gcc
+    env: ITK_VERSION=v5.0.1 TRAVIS_PYTHON_VERSION=3.7
 cache:
 - directories:
-  - $HOME/miniconda
   - $HOME/itk-${ITK_VERSION}
   - $HOME/itk-${ITK_VERSION}-build
 before_install:
@@ -39,7 +62,7 @@ before_script:
 - make --jobs=$NUM_THREADS --keep-going
 - cd -
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then curl "https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh" -o miniconda_install.sh; elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then curl "https://repo.continuum.io/miniconda/Miniconda3-latest-MacOSX-x86_64.sh" -o miniconda_Install.sh; fi
-- bash miniconda_install.sh -b -f -p "$HOME/miniconda/" || true
+- bash miniconda_install.sh -b -f -p "$HOME/miniconda/"
 - export PATH="$HOME/miniconda/bin:$PATH"
 - hash -r
 - conda config --set always_yes yes --set changeps1 no
