--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ cache:
   - $HOME/itk-${ITK_VERSION}
   - $HOME/itk-${ITK_VERSION}-build
 before_install:
-- if test $TRAVIS_OS_NAME == osx ; then brew update && brew install vtk python3 lcov || brew upgrade libpng; fi
+- if test $TRAVIS_OS_NAME == osx ; then brew update && brew install qt5 vtk lcov || brew upgrade libpng; fi
 before_script:
 - export NUM_THREADS=4
 - export ITK_SOURCE_DIR=$HOME/itk-${ITK_VERSION}
