--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ before_script:
 - export ITK_BUILD_DIR=${ITK_SOURCE_DIR}-build
 - export MINICONDA_MAC=https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh
 - export MINICONDA_LINUX=https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-- export CONDA_DIR=${PROJECT_DIR}/miniconda/
+- export CONDA_DIR=$HOME/miniconda/
 - if ! test -e ${ITK_SOURCE_DIR}/CMakeLists.txt; then rm -fr $ITK_SOURCE_DIR; fi
 - if ! test -d ${ITK_SOURCE_DIR}; then git clone --branch ${ITK_VERSION} https://github.com/InsightSoftwareConsortium/ITK.git ${ITK_SOURCE_DIR}; fi
 - if ! test -d ${ITK_BUILD_DIR}; then mkdir ${ITK_BUILD_DIR}; fi
